added index.html file

--- a/index.html
+++ b/index.html
@@ -3,9 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Moringa</title>
 </head>
+<Style>
+.nav-menu{
+    background-color:red;
+    text-decoration: none;
+    color:white
+}
+
+</style>
 <body>
-    
-</body>
-</html>
+    <header>
+        <nav>
+            <ul class="nav-menu">
+                <li><a href= "home.html" home></a></li>
+                <li>About us</li>
+                <li>Service</li>
+                <li>contact</li>
+            </ul>
+        </nav>
+
+    </body>
+    </html>
+
+                    
